[package]
name = "jbund"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC server for a BUND programming language"
license-file = "LICENSE"
repository = "https://github.com/vulogov/jbund"
categories = ["compilers"]
keywords = ["language", "stack", "concatenative", "lambda", "dynamic"]
exclude = ["examples", "Models", "Documentation", ".*"]

[dependencies]
bund_stdlib_text_classifier = ">=0.*.*"
bund_language_parser = ">=0.*.*"
bundcore = ">=0.*.*"
clap = { version = "4.5.18", features = ["derive"] }
curl = "0.4.46"
better-panic = "0.3.0"
easy-error = "1.0.*"
easy_reader = "0.5.2"
env_logger = "0.11.*"
log = "0.4.*"
rust_dynamic = ">=0.*.*"
rust_multistackvm = ">=0.*.*"
serde_json = "1.0.143"
lazy_static = "1.5.0"
time-graph = { version="0.3.2", features=["table"] }
jsonrpc-http-server = "15.0.0"
